--- a/app.html
+++ b/app.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Payment Integration</title>
+    <title>Payment Integration with Go</title>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 </head>
 <body>
-    <h1>Razorpay Payment Integration</h1>
+    <h1>Razorpay Payment Integration With Go</h1>
     <button id="rzp-button1">Pay</button>
     <script>
         document.getElementById('rzp-button1').onclick = function (e) {
